baseparse, typefind: only activate in pull mode if upstream is seekable

Upstream might support pull mode, but only sequential pulls,
which isn't gonna do much for us.

https://bugzilla.gnome.org/show_bug.cgi?id=634927